Added link to each image to go to the image page on unsplash

--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
         <h2><span class="loading"></span></h2>
         <p><span class="loading"></span></p>
       </div>
+      <div class="single-result">
+        <div class="image">
+          <img src="" alt="" />
+        </div>
+        <h2><span class="loading"></span></h2>
+        <p><span class="loading"></span></p>
+      </div>
+      <div class="single-result">
+        <div class="image">
+          <img src="" alt="" />
+        </div>
+        <h2><span class="loading"></span></h2>
+        <p><span class="loading"></span></p>
+      </div>
     </section>
 
     <script src="search.js" async defer></script>
